--- a/.github/workflows/collect.yaml
+++ b/.github/workflows/collect.yaml
@@ -65,7 +65,7 @@ jobs:
           fi
 
       - name: Collect
-        run: python -u subscribe/collect.py --all --both --overwrite --skip --esaygoing
+        run: python -u subscribe/collect.py --all --both --overwrite --skip -e
 
       - name: Timestamp
         run: date
