--- a/.github/workflows/collect.yaml
+++ b/.github/workflows/collect.yaml
@@ -1,8 +1,7 @@
 name: Collect
 on:
-  # executed once a week on Sundays at 00:00
   schedule:
-    - cron: "0 0 * * 1"
+    - cron: "0 */16 * * *"
   workflow_dispatch:
 
 concurrency:
@@ -10,20 +9,10 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  # time zone
   TZ: Asia/Shanghai
-
-  # github access token
   GIST_PAT: ${{ secrets.GIST_PAT }}
-
-  # github username and gist id, separated by '/'
   GIST_LINK: ${{ secrets.GIST_LINK }}
-
-  # the url to the list of airports that you maintain yourself
-  # each line include domain, coupon and invitation code, the domain must be included, and the latter two items are optional
   CUSTOMIZE_LINK: ${{ secrets.CUSTOMIZE_LINK }}
-
-  # include special protocols, such as vless hysteria2 and hysteria
   ENABLE_SPECIAL_PROTOCOLS: ${{ vars.ENABLE_SPECIAL_PROTOCOLS }}
 
 jobs:
@@ -31,6 +20,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Random Delay
+        run: sleep $(( RANDOM % 3600 ))
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
